--- a/app/src/main/res/layout/activity_default_tasks.xml
+++ b/app/src/main/res/layout/activity_default_tasks.xml
@@ -7,9 +7,25 @@
     android:orientation="vertical"
     tools:context=".DefaultTasksActivity">
 
-    <ListView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/defaultTasksListView" />
+        android:layout_height="match_parent">
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/defaultTasksListView" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="15dp"
+            android:clickable="true"
+            app:backgroundTint="@color/design_default_color_primary_dark"
+            app:tint="@color/white"
+            app:srcCompat="@drawable/ic_add" />
+
+    </FrameLayout>
 </LinearLayout>
