--- a/app/src/main/res/layout/default_task_row.xml
+++ b/app/src/main/res/layout/default_task_row.xml
@@ -1,13 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="7">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Main Title"
         android:textStyle="bold"
+        android:textSize="20sp"
         android:id="@+id/default_task_row_title"/>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/duration_shape">
+
+            <TextView
+                android:id="@+id/default_task_duration_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1:55h"
+                android:textStyle="bold"
+                android:textColor="@color/duration_text"
+                android:backgroundTint="@color/design_default_color_primary_dark"/>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:id="@+id/default_task_edit_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_edit"
+            android:contentDescription="@string/edit"
+            android:backgroundTint="@color/design_default_color_primary_dark"/>
+
+        <ImageButton
+            android:id="@+id/default_task_delete_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_delete"
+            android:contentDescription="@string/delete"
+            android:backgroundTint="@color/design_default_color_primary_dark"/>
+    </LinearLayout>
 </LinearLayout>
