--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#3333ff</color>
+    <color name="duration_background">#F49F1B</color>
+    <color name="duration_text">#00154F</color>
 </resources>
