--- a/app/src/main/res/layout/activity_default_tasks.xml
+++ b/app/src/main/res/layout/activity_default_tasks.xml
@@ -1,38 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:id="@+id/defaultTasksParent"
     tools:context=".DefaultTasksActivity">
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/defaultTasksListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/defaultTasksListView" />
-        </FrameLayout>
-    </LinearLayout>
+        android:layout_height="match_parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/defaultTasksAddButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="15dp"
         android:clickable="true"
-        app:backgroundTint="@color/design_default_color_primary_dark"
+        app:layout_constraintBottom_toBottomOf="@+id/defaultTasksParent"
+        app:layout_constraintEnd_toEndOf="@+id/defaultTasksParent"
+        app:srcCompat="@drawable/ic_add"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         app:tint="@color/white"
-        app:srcCompat="@drawable/ic_add" />
+        app:backgroundTint="@color/design_default_color_primary_dark"
+        android:contentDescription="@string/add_new_default_task"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,32 +35,36 @@
         android:id="@+id/defaultTasksShadow"
         android:clickable="true"/>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/defaultTasksBottomPanel"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_gravity="bottom|end"
-        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/defaultTasksParent"
         android:clickable="true"
+        android:background="@color/white"
+        android:visibility="gone"
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/addNewDefaultTaskString"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/add_new_default_task"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/editTextDefaultTaskTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ems="15"
-            android:text=""
             android:autofillHints=""
-            android:hint="@string/title"/>
+            android:ems="15"
+            android:hint="@string/title"
+            android:text=""
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addNewDefaultTaskString" />
 
         <EditText
             android:id="@+id/editTextDefaultTaskDuration"
@@ -77,7 +73,9 @@
             android:ems="8"
             android:text=""
             android:autofillHints=""
-            android:hint="@string/duration"/>
+            android:hint="@string/duration"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextDefaultTaskTitle"/>
 
         <Button
             android:id="@+id/defaultTasksSave"
@@ -85,8 +83,12 @@
             android:layout_height="wrap_content"
             android:text="@string/save"
             android:backgroundTint="@color/design_default_color_primary"
-            android:layout_gravity="end" />
+            android:layout_gravity="end"
+            app:layout_constraintBottom_toBottomOf="@+id/defaultTasksBottomPanel"
+            app:layout_constraintEnd_toEndOf="@+id/defaultTasksBottomPanel"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"/>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
