--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,33 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/copy_from_day"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/task_day_shape"
+            android:clickable="true"
+            android:text="@string/copy_tasks_from_day"
+            android:textColor="@color/task_day_text"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/add_default_task"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/task_day_shape"
+            android:text="@string/add_default_task"
+            android:textColor="@color/task_day_text"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"
+            android:clickable="true"/>
+
+        <TextView
             android:id="@+id/addNewTaskString"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +104,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/copy_from_day" />
 
         <EditText
             android:id="@+id/editTextTaskTitle"
@@ -100,34 +127,6 @@
             android:hint="@string/duration"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle"/>
-
-        <TextView
-            android:id="@+id/copy_from_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/task_day_shape"
-            android:clickable="true"
-            android:text="@string/copy_tasks_from_day"
-            android:textColor="@color/task_day_text"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/add_default_task"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/task_day_shape"
-            android:text="@string/add_default_task"
-            android:textColor="@color/task_day_text"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tasksSave"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="10dp"
-            android:clickable="true"/>
 
         <Button
             android:id="@+id/tasksSave"
