--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/task_day_shape"
-        android:text="Sat 09.02.2021"
+        android:text="Thu 09.02.2021"
         android:textColor="@color/task_day_text"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_margin="5dp"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:onClick="showPickDayDialog"/>
 
     <View
         android:id="@+id/view1"
@@ -66,7 +67,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tasksParent"
         android:clickable="true"
         android:background="@color/white"
-        android:visibility="visible"
+        android:visibility="gone"
         android:padding="10dp">
 
         <TextView
