--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="10dp"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:onClick="showInsertDefaultTaskDialog"/>
 
         <TextView
             android:id="@+id/addNewTaskString"
