--- a/app/src/main/res/layout/daily_routine_tasks_widget.xml
+++ b/app/src/main/res/layout/daily_routine_tasks_widget.xml
@@ -1,44 +1,30 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="0dp"
+    android:background="@color/white"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:id="@+id/widget">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/widgetTasksParent">
-
-        <TextView
-            android:id="@+id/widget_task_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/task_day_shape"
-            android:clickable="true"
-            android:onClick="showPickDayDialog"
-            android:text="Thu 09.02.2021"
-            android:textColor="@color/task_day_text"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <View
-            android:id="@+id/view2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/widget_task_day"
-            android:layout_marginTop="5dp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/widgetTasksRecyclerView"
+    <FrameLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:layout_width="match_parent"
+            android:id="@+id/widgetTitleLabel"
+            android:text="title"
+            android:textColor="@color/white"
+            android:background="@color/design_default_color_primary"
+            android:textSize="18dp"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:layout_height="0dp"/>
+    </FrameLayout>
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ListView android:id="@+id/widgetTasksList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/view2" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-</RelativeLayout>
+            android:background="@color/white"
+            android:dividerHeight="1dp"
+            android:divider="#eeeeee"
+            tools:listitem="@layout/task_row_widget"/>
+    </LinearLayout>
+</LinearLayout>
