--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -46,7 +46,7 @@
                 android:text="1:55h"
                 android:textColor="@color/duration_text"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/straightLineView2"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/task_row_title" />
 
@@ -64,18 +64,13 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"/>
 
-            <View
-                android:id="@+id/straightLineView2"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/black"
-                app:layout_constraintBottom_toBottomOf="parent" />
+
 
             <CheckBox
                 android:id="@+id/checkBoxTaskDone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@+id/straightLineView2"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:enabled="false"/>
