--- a/app/src/main/res/layout/task_row_widget.xml
+++ b/app/src/main/res/layout/task_row_widget.xml
@@ -1,17 +1,52 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:minHeight="0dp"
-    android:weightSum="2"
     android:id="@+id/widgetItemContainer"
     android:layout_height="wrap_content">
 
-    <TextView android:id="@+id/widget_task_row_title"
+    <TextView
+        android:id="@+id/widget_task_row_title"
         android:layout_width="wrap_content"
-        android:gravity="start"
-        android:layout_weight="1"
-        android:textColor="@color/black"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content"></TextView>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="2dp"
+        android:text="Main Title"
+        android:textSize="20sp"
+        android:textStyle="bold"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:minHeight="0dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/widget_task_time_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/time_shape"
+            android:text="23:45"
+            android:textColor="@color/time_text"
+            android:textStyle="bold"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"/>
+
+        <TextView
+            android:id="@+id/widget_task_duration_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/duration_shape"
+            android:text="1:55h"
+            android:textColor="@color/duration_text"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
 
 </LinearLayout>
