--- a/app/src/main/res/drawable/task_day_shape.xml
+++ b/app/src/main/res/drawable/task_day_shape.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="?attr/task_day_background"/>
+    <solid android:color="@color/task_day_background"/>
     <corners android:radius="5px"/>
     <padding android:left="7dp" android:top="4dp" android:right="7dp" android:bottom="4dp" />
 </shape>
