--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,8 +13,7 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
 
-        <item name="task_day_background">@color/task_day_background_dark</item>
+        <item name="bottom_panel_color">@color/bottom_panel_color_night</item>
     </style>
-
 
 </resources>
