--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,7 @@
     <color name="light_blue">#3333ff</color>
     <color name="duration_background">#F49F1B</color>
     <color name="duration_text">#00154F</color>
-
-    <color name="task_day_background_white">#FF6200EE</color>
-    <color name="task_day_background_dark">#FF000000</color>
-
+    <color name="task_day_background">#FF6200EE</color>
     <color name="task_day_text">#FFFFFFFF</color>
     <color name="time_background">#210070</color>
     <color name="time_text">#03DAC5</color>
@@ -21,4 +18,7 @@
     <color name="light_blue_200">#FF81D4FA</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
+
+    <color name="bottom_panel_color_day">#FFFFFFFF</color>
+    <color name="bottom_panel_color_night">#FF141414</color>
 </resources>
