main background color day/night mode

--- a/app/src/main/res/layout/activity_default_tasks.xml
+++ b/app/src/main/res/layout/activity_default_tasks.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/defaultTasksParent"
-    tools:context=".DefaultTasksActivity">
+    tools:context=".DefaultTasksActivity"
+    android:background="?attr/main_background">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/defaultTasksRecyclerView"
