--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/tasksParent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="?attr/main_background">
 
     <TextView
         android:id="@+id/task_day"
